--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="dark_slate_blue">#483D8B</color>
     <color name="charcoal">#404951</color>
     <color name="dialogColor">#018577</color>
+    <color name="gray10">#1a1a1a</color>
+    <color name="lowWhite">#8A7E7E</color>
 
 </resources>
