--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context="app.somadhan.myapplication.MainActivity">
 
     <FrameLayout
@@ -12,8 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
         android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,11 +24,14 @@
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:autofillHints=""
             android:background="@drawable/search_box"
+            android:backgroundTint="@color/gray10"
+            android:hint="@string/search_text"
             android:inputType="text"
             android:paddingStart="15dp"
-            android:hint="@string/search_text"
-            android:paddingEnd="50dp" />
+            android:paddingEnd="50dp"
+            android:textColorHint="@color/white" />
 
         <ImageButton
             android:id="@+id/searchButton"
@@ -42,64 +46,75 @@
 
 
     <ImageButton
-        android:id="@+id/filterButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/transparent"
-        android:elevation="10dp"
-        android:src="@drawable/filter"
-        app:layout_constraintEnd_toStartOf="@+id/threeButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/search_container"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
         android:id="@+id/threeButton"
         android:layout_width="30dp"
         android:layout_height="52dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/transparent"
         android:elevation="10dp"
-        android:src="@drawable/dots"
+        android:src="@drawable/three_dot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/search_container"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/manualButton"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:background="@drawable/square_button"
-        android:backgroundTint="@color/slate_gray"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/black"
+        android:drawableTop="@drawable/edit_manual"
+        android:drawablePadding="8dp"
+        android:orientation="vertical"
+        android:padding="16dp"
         android:text="@string/manual_text"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        app:elevation="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/aiButton"
+        app:layout_constraintEnd_toStartOf="@+id/aiButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/aiButton"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:background="@drawable/square_button"
-        android:backgroundTint="@color/dark_slate_blue"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/black"
+        android:drawableTop="@drawable/chatgpt_icon"
+        android:drawablePadding="8dp"
+        android:orientation="vertical"
+        android:padding="16dp"
         android:text="@string/ai_text"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        app:elevation="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/manualButton" />
+        app:layout_constraintStart_toEndOf="@+id/centerView" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNote"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_container"
+        tools:listitem="@layout/item_note"/>
+
+
+    <View
+        android:id="@+id/centerView"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
